Add README for custom distro

--- a/meta-tech-distro/README
+++ b/meta-tech-distro/README
@@ -1,41 +1,9 @@
-This README file contains information on the contents of the meta-tech-distro layer.
-
-Please see the corresponding sections below for details.
-
-Dependencies
-============
-
-  URI: <first dependency>
-  branch: <branch name>
-
-  URI: <second dependency>
-  branch: <branch name>
-
-  .
-  .
-  .
-
-Patches
-=======
-
-Please submit any patches against the meta-tech-distro layer to the xxxx mailing list (xxxx@zzzz.org)
-and cc: the maintainer:
-
-Maintainer: XXX YYYYYY <xxx.yyyyyy@zzzzz.com>
-
-Table of Contents
-=================
-
-  I. Adding the meta-tech-distro layer to your build
- II. Misc
-
-
-I. Adding the meta-tech-distro layer to your build
-=================================================
-
-Run 'bitbake-layers add-layer meta-tech-distro'
-
-II. Misc
-========
-
---- replace with specific information about the meta-tech-distro layer ---
+This is a custom distro. Creating a distro from scratch without can let having it less size and optimized.
+Custom distro configuration development:
+  - Support for init manager "systemd" controlled by a variable
+  - Optimizations (no recommended packages, full control on distro features)
+  - No poky
+  - Enable CVE checks
+  - Disable GPLv3 packages for all images
+  - Enable build information integration for all images
+  - Definition of build type variables to control development or release builds 
